tests/fail/elaboration/unification/escaping-local-var.snap
stdout = ''
stderr = '''
error: escaping local variable
  ┌─ tests/fail/elaboration/unification/escaping-local-var.fathom:3:10
  │
3 │ fun n => n : _ -> _
  │          ^

error: failed to infer placeholder expression
  ┌─ tests/fail/elaboration/unification/escaping-local-var.fathom:3:14
  │
3 │ fun n => n : _ -> _
  │              ^ unsolved placeholder expression

error: failed to infer placeholder expression
  ┌─ tests/fail/elaboration/unification/escaping-local-var.fathom:3:19
  │
3 │ fun n => n : _ -> _
  │                   ^ unsolved placeholder expression

'''
